--- a/hack/kubernetes-qingyuancloud/single/etcd3-controller.yaml
+++ b/hack/kubernetes-qingyuancloud/single/etcd3-controller.yaml
@@ -43,12 +43,12 @@ spec:
         #   protocol: TCP
         volumeMounts:
         - mountPath: /var/etcd
-          name: etcd-data # etcd-store
+          name: etcd-store # etcd-data
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       volumes:
       - emptyDir: {}
         name: etcd-data
       - hostPath:
-          path: /tmp/etcd-v3-single
+          path: /tmp/k8s-vols/etcd-v3-single
         name: etcd-store
